<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--  Logo  -->
    <ImageView
        android:id="@+id/ivLogoLogin"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/login_screen_logo"
        android:src="@drawable/ic_medic_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  Welcome  -->
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lambo"
        android:text="@string/selamat_datang"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogoLogin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abaya"
        android:text="@string/text_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <!--Wave 1-->
    <View
        android:id="@+id/wave1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--  Wave 2  -->
    <View
        android:id="@+id/wave2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:alpha="0.8"
        android:background="@drawable/ic_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--  Email Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:theme="@style/LoginRegister"
        app:boxStrokeColor="@color/rain"
        app:hintEnabled="false"
        app:hintTextColor="@color/rain"
        app:layout_constraintBottom_toTopOf="@id/tipPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:placeholderTextColor="@color/rain">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_form"
            android:drawableStart="@drawable/focused_email"
            android:drawablePadding="12dp"
            android:fontFamily="@font/segoeui"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="8dp"
            android:singleLine="true"
            android:textColor="@color/rain" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--  Password Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="48dp"
        android:theme="@style/LoginRegister"
        app:backgroundTint="@color/rain"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/rain">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_form"
            android:drawableStart="@drawable/focused_password"
            android:drawablePadding="12dp"
            android:fontFamily="@font/segoeui"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="8dp"
            android:singleLine="true"
            android:textColor="@color/rain" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--  Forgot Password -->
    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="ivForgotPass"
        android:text="@string/lupa_password"
        app:layout_constraintEnd_toEndOf="@id/tipPassword"
        app:layout_constraintTop_toBottomOf="@id/tipPassword" />

    <!--  Login Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:elevation="4dp"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/ivLoginGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingProgressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="4dp"
        android:padding="8dp"
        android:tint="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toTopOf="@id/btn_login"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading"
        app:lottie_speed="2.0" />

    <!--  Google Logo -->
    <ImageView
        android:id="@+id/ivLoginGoogle"
        style="@style/iconPlaceholder"
        android:contentDescription="@string/google_logo"
        android:onClick="btnGoogle"
        android:src="@drawable/google_logo"
        app:layout_constraintBottom_toTopOf="@id/tvRegisterAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivLoginFacebook" />

    <!--  Facebook Logo -->
    <ImageView
        android:id="@+id/ivLoginFacebook"
        style="@style/iconPlaceholder"
        android:contentDescription="@string/facebook_logo"
        android:onClick="btnFacebook"
        android:src="@drawable/facebook_logo"
        app:layout_constraintBottom_toTopOf="@id/tvRegisterAccount"
        app:layout_constraintEnd_toStartOf="@id/ivLoginGoogle"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTextAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeui"
        android:text="@string/belum_punya_akun"
        app:layout_constraintBottom_toTopOf="@id/wave2"
        app:layout_constraintEnd_toStartOf="@id/tvRegisterAccount"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRegisterAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/segoeui_bold"
        android:onClick="tvRegisterAccount"
        android:text="@string/daftar_sekarang"
        app:layout_constraintBottom_toTopOf="@id/wave2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTextAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>